[package]
name = "wasm-unic"
version = "0.1.0"
authors = ["Yan Li <eyeplum@gmail.com>"]
edition = "2018"
description = "WebAssembly wrapper for rust-unic"
license = "MIT"
repository = "https://github.com/eyeplum/wasm-unic"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.unic]
git = "https://github.com/eyeplum/rust-unic.git"
branch = "develop"
