[package]
name = "wasm-unic"
version = "0.2.0"
authors = ["Yan Li <eyeplum@gmail.com>"]
edition = "2018"
description = "WebAssembly wrapper for rust-unic"
license = "MIT"
repository = "https://github.com/eyeplum/wasm-unic"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.unic]
git = "https://github.com/eyeplum/rust-unic.git"
branch = "develop"

# Workaround a bug in wasm-bindgen 0.2.69
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
